# fewd

./: .env.example  .gitignore  .typos.toml  0adigc5bjti5l0dgtoptvlsarfgbrluo.darc  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  dprint.jsonc  gunnkmfjhudbag3btm2a8nvnqsbodlr1.darc  index.html  justfile  manifest  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json  settings.local.json
.claude/agents/: security-reviewer.md
.claude/hooks/: ci-before-push.sh
.claude/skills/deploy/: SKILL.md
.claude/skills/new-entity/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: auto-format.yml  build.yml  ci.yml
deploy/: fewd.service  setup-remote.sh
scripts/: ci-check.sh  migration-smoke-test.sh
server/: Cargo.toml  build.rs
server/migration/: Cargo.toml
server/migration/src/: ingredient_amount.rs  ingredient_splitter.rs  lib.rs  m20260118_000001_create_people.rs  m20260118_000002_create_recipes.rs  m20260118_000003_create_meals.rs  m20260208_000004_add_recipe_rating.rs  m20260208_000006_create_settings.rs  m20260212_000007_add_recipe_source_url.rs  m20260213_000008_add_person_drink_prefs.rs  m20260213_000009_create_bar_items.rs  m20260213_000010_create_drink_recipes.rs  m20260214_000011_add_drink_recipe_source_url.rs  m20260419_000012_add_recipe_slugs.rs  m20260424_000012_backfill_recipe_slugs.rs  m20260427_000013_split_ingredient_name_and_prep.rs  m20260428_000014_reparse_misbucketed_ingredients.rs  slug.rs
server/src/: db.rs  dto.rs  error.rs  lib.rs  main.rs
server/src/entities/: bar_item.rs  drink_recipe.rs  meal.rs  meal_template.rs  mod.rs  person.rs  recipe.rs
server/src/mcp/: handler.rs  lookups.rs  mod.rs
server/src/mcp/schemas/: common.rs  errors.rs  meals.rs  mod.rs  people.rs  recipes.rs  shopping.rs
server/src/routes/: cocktails.rs  meal_templates.rs  meals.rs  mod.rs  people.rs  recipes.rs  settings.rs  shopping.rs  sse_helpers.rs  suggestions.rs
server/src/services/: ai_suggestion_service.rs  bar_item_service.rs  claude_client.rs  cocktail_suggestion_service.rs  drink_recipe_import_service.rs  drink_recipe_service.rs  ingredient_amount.rs  ingredient_splitter.rs  meal_service.rs  meal_template_service.rs  mod.rs  person_service.rs  prompt_builder.rs  recipe_adapter.rs  recipe_enhancer.rs  recipe_import_service.rs  recipe_parser.rs  recipe_scaler.rs  recipe_service.rs  seed_data.rs  settings_service.rs  shopping_service.rs  suggestion_service.rs
server/tests/: service_tests.rs
server/tests/fixtures/schema-snapshots/: README.md  baseline.sql
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20260208_000005_create_meal_templates.rs
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  meal.rs  meal_template.rs  mod.rs  person.rs  recipe.rs  settings.rs  shopping.rs  suggestion.rs
src-tauri/src/entities/: mod.rs  recipe.rs
src-tauri/src/services/: ai_suggestion_service.rs  claude_client.rs  meal_service.rs  meal_template_service.rs  mod.rs  person_service.rs  prompt_builder.rs  recipe_adapter.rs  recipe_enhancer.rs  recipe_import_service.rs  recipe_parser.rs  recipe_scaler.rs  recipe_service.rs  settings_service.rs  shopping_service.rs  suggestion_service.rs  unit_converter.rs
src-tauri/tests/: service_tests.rs
src/components/: AdaptRecipePanel.test.tsx  AdaptRecipePanel.tsx  AiSuggestionSection.test.tsx  AiSuggestionSection.tsx  BarInventory.test.tsx  BarInventory.tsx  CocktailSuggester.test.tsx  CocktailSuggester.tsx  CookingView.test.tsx  CookingView.tsx  DraftReview.test.tsx  DraftReview.tsx  DrinkRecipeDetail.tsx  DrinkRecipeForm.tsx  DrinkRecipeManager.test.tsx  DrinkRecipeManager.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FamilyManager.test.tsx  FamilyManager.tsx  Icon.tsx  IngredientInput.test.tsx  IngredientInput.tsx  LockWarningBanner.tsx  MealPlanner.test.tsx  MealPlanner.tsx  NumberInput.test.tsx  NumberInput.tsx  PersonFieldToggles.tsx  RecipeManager.test.tsx  RecipeManager.tsx  ServingMismatchBanner.test.tsx  ServingMismatchBanner.tsx  SettingsPanel.tsx  ShoppingList.test.tsx  ShoppingList.tsx  StarRating.test.tsx  StarRating.tsx  (+7 more)
src/contexts/: ChromeContext.tsx
src/hooks/: useBarItems.test.ts  useBarItems.ts  useCocktailSuggestions.test.ts  useCocktailSuggestions.ts  useDrinkRecipes.test.ts  useDrinkRecipes.ts  useMealTemplates.test.ts  useMealTemplates.ts  useMeals.test.ts  useMeals.ts  usePeople.test.ts  usePeople.ts  useRecipes.test.ts  useRecipes.ts  useSettings.test.ts  useSettings.ts  useShoppingList.test.ts  useShoppingList.ts  useStreamingMutation.test.ts  useStreamingMutation.ts  useSuggestions.test.ts  useSuggestions.ts  useWakeLock.ts
src/lib/: api.ts  recipeMatching.ts
src/routes/: DrinkRecipeDetailPage.tsx  RecipeDetailPage.test.tsx  RecipeDetailPage.tsx  RootLayout.test.tsx  RootLayout.tsx
src/test/: factories.ts  fetchMock.ts  queryClient.tsx  renderWithProviders.tsx  streamMock.ts
src/types/: barItem.ts  drinkRecipe.ts  meal.test.ts  meal.ts  mealTemplate.test.ts  mealTemplate.ts  person.test.ts  person.ts  recipe.test.ts  recipe.ts  settings.ts  shopping.ts  suggestion.ts
src/utils/: dates.test.ts  dates.ts
