[package]
name = "fewd-server"
version = "0.1.0"
description = "Family meal planner web server"
authors = ["you"]
edition = "2021"

[[bin]]
name = "fewd-server"
path = "src/main.rs"

[lib]
name = "fewd_lib"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Static file embedding
rust-embed = "8"
mime_guess = "2"

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
migration = { path = "./migration" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (for Claude API and URL import)
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# PDF and HTML processing
pdf-extract = "0.10.0"
html2text = "0.16.7"

# Misc
hostname = "0.4.2"
