[package]
name = "fewd-server"
version.workspace = true
edition.workspace = true
description = "Family meal planner web server"
authors = ["you"]

[[bin]]
name = "fewd-server"
path = "src/main.rs"

[lib]
name = "fewd_lib"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Static file embedding
rust-embed = "8"
mime_guess = "2"

# Database
sea-orm = { workspace = true }
migration = { path = "./migration" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (for Claude API and URL import)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Streaming support (SSE from Claude API → SSE to browser)
tokio-stream = "0.1"
async-stream = "0.3"
futures = "0.3"

# PDF and HTML processing
pdf-extract = "0.10.0"
html2text = "0.16.7"

# URL parsing & validation
url = "2"

# Misc
hostname = "0.4.2"

# MCP (Model Context Protocol) server — exposes domain to AI assistants
rmcp = { version = "1.5", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = "1"
