[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
sea-orm-migration = "1.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

[lib]
name = "migration"
path = "src/lib.rs"
