[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
sea-orm-migration = "1.1"

[dev-dependencies]
# Tests run async migrations against an in-memory SQLite. The sqlx-sqlite +
# runtime feature is needed for `Database::connect("sqlite::memory:")` to work
# in tests; the runtime build doesn't need it because the migration uses raw
# SQL (no SchemaManager schema-introspection helpers).
tokio = { version = "1", features = ["macros", "rt"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

[lib]
name = "migration"
path = "src/lib.rs"
