[package]
name = "migration"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
sea-orm-migration = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Tests run async migrations against an in-memory SQLite. The sqlx-sqlite +
# runtime feature is needed for `Database::connect("sqlite::memory:")` to work
# in tests; the runtime build doesn't need it because the migration uses raw
# SQL (no SchemaManager schema-introspection helpers).
tokio = { workspace = true, features = ["macros", "rt"] }
sea-orm-migration = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

[lib]
name = "migration"
path = "src/lib.rs"
